1999-12-26  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.c: Fix array bounds write when message exactly
	matches the buffer allocated for it.
	Suppress a UMR in referencing the first byte of unitialized input
	fields.

	* FvwmForm/ReadXServer.c: Backout code cleanup.  Needs more work.

	* FvwmScript/FvwmScript.1: Describe how scripts are located for
	reading.

	* FvwmScript/FvwmScript.c: Read the input file from FVWM_USERHOME
	or FVWM_CONFIGDIR in addition to old rules.  This makes
	"*FvwmScriptPath" unnecessary.

	* FvwmScript/Makefile.am: Pass configdir into FvwmScript.

	* FvwmForm/FvwmForm.c (RedrawItem): Fixed display corruption due to
	pasting, and display corruption for multiple messages arriving from
	fvwm and showing in a forms message area.

1999-12-20  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmIconMan/globals.c: Fix for defaults styles I forgot to add
	one for iconbutton

1999-12-18  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (EndLessLoop):
	(Alarm):
	(DoAlarmAction):
	(LoopOnEvents):
	Fixed Alarm stuff
	
1999-12-17  Dan Espen  <dane@mk.telcordia.com>

	* FvwmIconMan/readconfig.c: Keep TRU64 compiler happy by changing
	structure initialization from {} to {0}.

	* FvwmDragWell/fvwmDragWell.h: remove spurious ;.

1999-12-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmBacker/FvwmBacker.c (ProcessMessage):
	backer now takes action when the desk is changed

	* FvwmPager/FvwmPager.c (ParseOptions):
	pager handles DesktopSize correctly; DeskTopScale option finally works

1999-12-14  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents):
	(RevealTaskBar):
	(HideTaskBar):
	Tried to fix user resizing with AutoHide. Fixed Hide/Reveal with
 	a lot of rows

1999-12-13  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.{c,h} (WarpTaskBar):
	(LoopOnEvents):
	Fixed AutoStick

	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage):
	(StartMeUp):
	Some hints clean up
