@@ -1,5 +1,5 @@
 ## Process this file with automake to create Makefile.in
 
 EXTRA_DIST = BellSetup Buttons Colorset Date DeskSetup FileBrowser	\
-	KeyboardSetup PointerSetup Quit ScreenDump ScreenSetup	\
+	Find KeyboardSetup PointerSetup Quit ScreenDump ScreenSetup	\
 	TerminalSettings.fss UpdateFvwm2TermMenu system.fvwmrc
