@@ -1,3 +1,11 @@
+1999-12-27  olicha   <olivier.chapuis@free.fr>
+
+	* FvwmScript/FvwmScript.c (MainLoop): Fixed CPU for perodic Task
+
+	* FvwmScript/Scripts/Find:
+	* FvwmScript/Scripts/Makefile.am:
+	New script, a front-end to find
+	
 1999-12-26  Dan Espen  <dane@mk.telcordia.com>
 
 	* FvwmForm/FvwmForm.c: Fix array bounds write when message exactly
